src/objects/AIF_Approval_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Application_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIF_Approval_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmation_of_Budget_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Confirmation of Budget Approver:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIF_Approval_Matrices4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTS_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DTS Approver:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000003hwWKEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device Name</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>AIF Approval Matrices</relationshipLabel>
        <relationshipName>AIF_Approval_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_SA_Status__c</fullName>
        <description>From related Device record</description>
        <formula>Device_Name__r.SA_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From related Device record</inlineHelpText>
        <label>Device SA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMD_Status_Check_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FMD Status Check Approver:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIF_Approval_Matrices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIF_Approval_Matrices3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LRB_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LRB Approver:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000003hwWHEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routing_Key__c</fullName>
        <label>Routing Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>AIF Approval Matrix</label>
    <nameField>
        <label>AIF Approval Matrices</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIF Approval Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>